--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "license": "MIT",
+  "bin": {
+    "mongodb-node-playground": "./bin/mongodb-node-playground.js"
+  },
   "dependencies": {
     "esm": "^3.2.25",
     "mongodb": "3.5.3"
