--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "cli-color": "^2.0.0",
     "esm": "^3.2.25",
+    "kerberos": "^1.1.4",
     "mongodb": "3.6.2",
     "yargs-parser": "^20.2.1"
   },
